<resources>
    <string name="app_name">Pressure Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="diamond_raman_details">Raman signal should be measured at the center of a culet.
        The "measured position" is the minimum of the Raman signal derivative</string>
    <string name="diamond_anvil_details">It is not a Raman signal from an anvil, it is a peak from
        a diamond inside the sample chamber                                   \n </string>
    <string name="diamond_anvil_raman">Diamond Anvil Raman</string>
    <string name="diamond_raman">Diamond Raman</string>
    <string name="ambient_diamond">Ambient pressure diamond peak (cm-1)</string>
    <string name="measured_peak">Measured position (cm-1)</string>
    <string name="calculate_P">Calculate pressure</string>

    <string name="info_ruby">\nPressure dependence of ruby shift is taken from:\n\nShen G., Wang Y., Dewaele A. et al. (2020) High Pres. Res. doi: 10.1080/08957959.2020.1791107\n\nMao H.K., Xu J., and Bell P.M. (1986) J. Geophys. Res. 91, 4673\n\n\n
        Temperature correction comes from:\n\nDatchi F., Dewaele A., Loubeyre P., et al. (2007) High Press. Res. 27, No 4, 447-463</string>

    <string name="info_diamond">\nCalibration for Diamond anvil Raman comes from:\n\nAkahama Y. and Kawamura H., J. Appl. Phys. 100, 043516 (2006).\n\n\n
        Calibration for Diamond Raman is taken from:\n\nDubrovinskaia N. et al., Appl. Phys. Lett. 97, 251903 (2010).</string>
    <string name="pressure_gpa">Pressure (GPa)</string>
    <string name="info">Info</string>
    <string name="shen_et_al_2020">Shen et al. 2020</string>
    <string name="mao_et_al_1986">Mao et al. 1986</string>
    <string name="mao_non_hydro">Mao non-hydro</string>
    <string name="reference_ruby_nm">Reference ruby (nm)</string>
    <string name="k">K</string>
    <string name="c">C</string>
    <string name="at_t">at T</string>
    <string name="measured_ruby_nm">Measured ruby (nm)</string>
    <string name="ruby">Ruby</string>
    <string name="diamond">Diamond</string>
    <string name="delete">X</string>

</resources>