<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".diamond.DiamondFragment">

    <data>
        <variable
            name="diamondViewModel"
            type="com.example.pressurecalcapp.diamond.DiamondViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroupDiaTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@={diamondViewModel.method}"
            android:layout_marginStart="@dimen/very_small_margin8"
            android:layout_marginTop="@dimen/very_small_margin8"
            android:layout_marginEnd="@dimen/very_small_margin8"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/dia_raman_segment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shen_button_selector"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:text="@string/diamond_raman"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/dia_anvil_raman_segment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/mao_non_hydro_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/diamond_anvil_raman"
                android:textColor="@color/black" />
        </RadioGroup>


        <TextView
            android:id="@+id/detailsTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_margin8"
            android:layout_marginTop="@dimen/small_margin16"
            android:layout_marginEnd="@dimen/very_small_margin8"
            android:background="@drawable/orange_rounded_textview"
            android:backgroundTint="@color/orange_background"
            android:gravity="center"
            android:paddingStart="@dimen/small_padding"
            android:paddingLeft="@dimen/small_padding"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            methodDetails="@{diamondViewModel.method}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupDiaTab" />

        <TextView
            android:id="@+id/ambientPressPeakLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin16"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/small_margin16"
            android:gravity="center"
            android:text="@string/ambient_diamond"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/refPeak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsTV" />

        <EditText
            android:id="@+id/refPeak"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/large_margin32"
            android:layout_marginEnd="@dimen/small_margin16"
            android:background="@drawable/white_rounded_textview"
            android:text = "@={diamondViewModel.refPeakString}"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsTV"
            android:autofillHints="1333.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin16"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/small_margin16"
            android:gravity="center"
            android:text="@string/measured_peak"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/gotPeak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ambientPressPeakLabel" />

        <EditText
            android:id="@+id/gotPeak"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/large_margin32"
            android:layout_marginEnd="@dimen/small_margin16"
            android:background="@drawable/white_rounded_textview"
            android:text = "@={diamondViewModel.gotPeakString}"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refPeak"
            android:autofillHints="1333.0" />

        <TextView
            android:id="@+id/diaResP"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/large_margin32"
            android:layout_marginEnd="@dimen/small_margin16"
            android:background="@drawable/white_rounded_textview"
            android:text = "@{diamondViewModel.resultPressureString}"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gotPeak" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="@dimen/large_margin32"
            android:text="@string/pressure_gpa"
            android:textColor="#F44336"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/diaResP"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/diaCalcP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_margin8"
            android:layout_marginTop="@dimen/large_margin32"
            android:layout_marginEnd="@dimen/very_small_margin8"
            android:text="@string/calculate_P"
            android:onClick="@{() -> diamondViewModel.calculatePressureDiamondClicked()}"
            android:textColor="@color/button_text"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/diaInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/very_small_margin8"
            android:backgroundTint="@color/white"
            android:text="@string/info"
            android:textColor="@color/button_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diaCalcP" />

        <Button
            android:id="@+id/rubyTabBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ruby"
            android:backgroundTint="@color/tab_button"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/diamondTabBTN"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/diamondTabBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/diamond"
            android:backgroundTint="@color/gray_background"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rubyTabBTN" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>